--- a/src/index.css
+++ b/src/index.css
@@ -135,21 +135,24 @@ nav #favourite_counter {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  flex: 1 1 auto;
+  width: 30rem;
 }
 .preview_card .food_info h3 {
-  max-height: 4.25rem;
-  overflow: hidden;
+  height: 3rem;
   padding: 0.5rem 1rem;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 .preview_card .food_info ::-webkit-scrollbar {
-  background-color: transparent;
   width: 1rem;
 }
 .preview_card .food_info ::-webkit-scrollbar-thumb {
-  background-color: #E86A33;
-  box-shadow: inset 0 0 0.5rem var(--black);
-  border-radius: 2rem;
+  background-color: transparent;
+  box-shadow: inset 0 0 0.25rem var(--black);
+}
+.preview_card .food_info ::-webkit-scrollbar-thumb:hover {
+  background-color: var(--orange);
 }
 .preview_card .food_info ul {
   height: 100%;
