--- a/src/index.scss
+++ b/src/index.scss
@@ -139,21 +139,23 @@ nav {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    flex: 1 1 auto;
+    width: 30rem;
     h3 {
-      max-height: 4.25rem;
-      overflow: hidden;
+      height: 3rem;
       padding: 0.5rem 1rem;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
     }
     ::-webkit-scrollbar {
-      background-color: transparent;
       width: 1rem;
-      // appearance: none;
     }
     ::-webkit-scrollbar-thumb {
-      background-color:#E86A33;
-      box-shadow: inset 0 0 0.5rem var(--black);
-      border-radius: 2rem;
+      background-color: transparent;
+      box-shadow: inset 0 0 0.25rem var(--black);
+      &:hover {
+        background-color: var(--orange);
+      }
     }
     ul {
       height: 100%;
